fixed textarea height, added autofill styles, removed hover of contacts on mobile and tablet versions

--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,5 +1,6 @@
 .form {
   width: 100%;
+
   &__input {
     box-sizing: border-box;
     margin: 0 0 16px;
@@ -18,6 +19,10 @@
     color: $color-main-dark;
     outline: 1px solid transparent;
 
+    @include on-desktop {
+      padding: 14px 16px;
+    }
+
     &:focus {
       outline: 1px solid $color-main-dark;
     }
@@ -30,9 +35,10 @@
       margin: 0 0 32px;
 
       display: flex;
+      width: 100%;
+      height: 144px;
 
       resize: none;
-      width: 100%;
     }
 
     &::placeholder {
