--- a/src/styles/blocks/_top-actions.scss
+++ b/src/styles/blocks/_top-actions.scss
@@ -57,8 +57,10 @@
   &__address {
     &:hover {
       .top-actions__location-list {
-        opacity: 1;
-        pointer-events: all;
+        @include on-desktop {
+          opacity: 1;
+          pointer-events: all;
+        }
       }
     }
   }
